- 기본 레이아웃 완료, 컨텐츠 영역 기본 css 작업 중

--- a/assets/lib/css/less/color.less
+++ b/assets/lib/css/less/color.less
@@ -8,7 +8,8 @@
 @red:#e44d26;
 @orange:#f79d30;
 @green:#00986b;
-@yellow:#fff000;
 @navy:#081121;
 @white:#fff;
 @black:#000;
+@yellow:#fff000;
+@yellow2:#decd11;
