--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -1643,7 +1643,7 @@ body {
   left: 0;
   top: 0;
   right: 0;
-  z-index: 99999;
+  z-index: 99998;
   opacity: 1;
   height: 100%;
   background: #000000;
@@ -3256,6 +3256,9 @@ body {
   transition: transform 0.6s, opacity 0.6s;
   transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
 }
+.desktop .hd_layer_box.assets_page_move .inner {
+  transition-delay: .3s;
+}
 .desktop.hd_assetsLink_on .hd_layer_box,
 .desktop.hd_search_on .hd_layer_box {
   transition: left 0s, top 0s, background-color 0.6s;
@@ -3297,6 +3300,9 @@ body {
 .device .hd_layer_box.hash_move {
   transition: left 0s 0.1s, top 0s 0.1s, transform 0s 0.1s, opacity 0.1s;
   transition-timing-function: ease;
+}
+.device .hd_layer_box.assets_page_move {
+  transition-delay: .3s;
 }
 .device .hd_layer_box .inner {
   opacity: 1;
@@ -3342,9 +3348,7 @@ body {
 .desktop.hd_assetsLink_on .uk_header,
 .desktop.hd_search_on .uk_header,
 .desktop.hd_assetsLink_on .loading,
-.desktop.hd_search_on .loading,
-.desktop.hd_assetsLink_on.md_state .side_menu_area.fixed .side_menu,
-.desktop.hd_search_on.md_state .side_menu_area.fixed .side_menu {
+.desktop.hd_search_on .loading {
   right: 17px;
 }
 .desktop.hd_assetsLink_on.opera body,
@@ -3354,9 +3358,7 @@ body {
 .desktop.hd_assetsLink_on.opera .uk_header,
 .desktop.hd_search_on.opera .uk_header,
 .desktop.hd_assetsLink_on.opera .loading,
-.desktop.hd_search_on.opera .loading,
-.desktop.hd_assetsLink_on.opera.md_state .side_menu_area.fixed .side_menu,
-.desktop.hd_search_on.opera.md_state .side_menu_area.fixed .side_menu {
+.desktop.hd_search_on.opera .loading {
   right: 15px;
 }
 .desktop.hd_assetsLink_on.edge body,
@@ -3366,9 +3368,7 @@ body {
 .desktop.hd_assetsLink_on.edge .uk_header,
 .desktop.hd_search_on.edge .uk_header,
 .desktop.hd_assetsLink_on.edge .loading,
-.desktop.hd_search_on.edge .loading,
-.desktop.hd_assetsLink_on.edge.md_state .side_menu_area.fixed .side_menu,
-.desktop.hd_search_on.edge.md_state .side_menu_area.fixed .side_menu {
+.desktop.hd_search_on.edge .loading {
   right: 16px;
 }
 /*
@@ -4679,7 +4679,7 @@ body {
   background: #fff;
 }
 .hd_assetsLink_on,
-.device.sub_page.hd_assetsLink_on {
+.device.sub_page.sub_black {
   background: #000;
 }
 .sub_page .uk_container {
@@ -4693,6 +4693,73 @@ body {
   .sub_page .uk_container {
     padding-top: 60px;
   }
+}
+.top_link_css {
+  position: absolute;
+  left: 50px;
+  right: 50px;
+  top: 40px;
+  z-index: 3;
+  padding: 0;
+  font-size: 0;
+  background: #fff;
+  box-shadow: none;
+}
+.top_link_css li {
+  display: inline-block;
+  position: relative;
+  padding-left: 3px;
+}
+.top_link_css li:before {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 3px;
+  height: 3px;
+  margin-top: -2px;
+  background: #444;
+  border-radius: 100%;
+  content: "";
+}
+.top_link_css li:first-child {
+  padding-left: 0;
+}
+.top_link_css li:first-child:before {
+  display: none;
+}
+.top_link_css li a {
+  display: block;
+  line-height: 36px;
+  padding: 0 15px;
+  font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
+  font-size: 18px;
+  color: rgba(8, 17, 33, 0.85);
+  font-weight: 600;
+  letter-spacing: -0.3px;
+  transition: color .15s;
+}
+.top_link_css li i {
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+.top_link_css li:hover a,
+.top_link_css li.on a {
+  color: #0463ff;
+}
+.top_link_css li.on a {
+  font-weight: 600;
+}
+.top_link_css li.on i:before {
+  position: absolute;
+  left: -3px;
+  right: -3px;
+  bottom: 5px;
+  z-index: -1;
+  height: 12px;
+  background: #fff000;
+  border-radius: 3px;
+  content: "";
 }
 .sub_top {
   position: relative;
@@ -4730,7 +4797,11 @@ body {
   left: 50px;
   right: 50px;
   top: 40px;
+  z-index: 3;
+  padding: 0;
   font-size: 0;
+  background: #fff;
+  box-shadow: none;
 }
 .sub_top .top_link ul li {
   display: inline-block;
@@ -4758,9 +4829,10 @@ body {
   display: block;
   line-height: 36px;
   padding: 0 15px;
+  font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
   font-size: 18px;
   color: rgba(8, 17, 33, 0.85);
-  font-weight: 400;
+  font-weight: 600;
   letter-spacing: -0.3px;
   transition: color .15s;
 }
@@ -4786,6 +4858,38 @@ body {
   background: #fff000;
   border-radius: 3px;
   content: "";
+}
+.sub_top .top_link ul.fixed {
+  position: fixed;
+  left: auto;
+  right: 54px;
+  top: 110px;
+  z-index: 4;
+  padding: 0 5px;
+  box-shadow: 0 0 0 4px #e9e9e9;
+}
+.sub_top .top_link ul.fixed:before {
+  display: none;
+  font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
+  font-size: 16px;
+  color: #081121;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+  content: "Quick Link";
+}
+.sub_top .top_link ul.fixed li a {
+  height: 30px;
+  line-height: 29px;
+  padding: 0 10px;
+  font-size: 14px;
+  color: #444;
+}
+.sub_top .top_link ul.fixed li:hover a,
+.sub_top .top_link ul.fixed li.on a {
+  color: #0463ff;
+}
+.sub_top .top_link ul.fixed li.on i:before {
+  height: 10px;
 }
 .sub_top .inner {
   display: inline-block;
@@ -4839,6 +4943,84 @@ body {
     background: #eee;
     content: "";
   }
+  .sub_top .top_link ul,
+  .sub_top .top_link ul.fixed {
+    position: absolute;
+    left: 50px;
+    right: 50px;
+    top: 40px;
+    z-index: 3;
+    padding: 0;
+    font-size: 0;
+    background: #fff;
+    box-shadow: none;
+  }
+  .sub_top .top_link ul li,
+  .sub_top .top_link ul.fixed li {
+    display: inline-block;
+    position: relative;
+    padding-left: 3px;
+  }
+  .sub_top .top_link ul li:before,
+  .sub_top .top_link ul.fixed li:before {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 3px;
+    height: 3px;
+    margin-top: -2px;
+    background: #444;
+    border-radius: 100%;
+    content: "";
+  }
+  .sub_top .top_link ul li:first-child,
+  .sub_top .top_link ul.fixed li:first-child {
+    padding-left: 0;
+  }
+  .sub_top .top_link ul li:first-child:before,
+  .sub_top .top_link ul.fixed li:first-child:before {
+    display: none;
+  }
+  .sub_top .top_link ul li a,
+  .sub_top .top_link ul.fixed li a {
+    display: block;
+    line-height: 36px;
+    padding: 0 15px;
+    font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
+    font-size: 18px;
+    color: rgba(8, 17, 33, 0.85);
+    font-weight: 600;
+    letter-spacing: -0.3px;
+    transition: color .15s;
+  }
+  .sub_top .top_link ul li i,
+  .sub_top .top_link ul.fixed li i {
+    display: block;
+    position: relative;
+    z-index: 1;
+  }
+  .sub_top .top_link ul li:hover a,
+  .sub_top .top_link ul.fixed li:hover a,
+  .sub_top .top_link ul li.on a,
+  .sub_top .top_link ul.fixed li.on a {
+    color: #0463ff;
+  }
+  .sub_top .top_link ul li.on a,
+  .sub_top .top_link ul.fixed li.on a {
+    font-weight: 600;
+  }
+  .sub_top .top_link ul li.on i:before,
+  .sub_top .top_link ul.fixed li.on i:before {
+    position: absolute;
+    left: -3px;
+    right: -3px;
+    bottom: 5px;
+    z-index: -1;
+    height: 12px;
+    background: #fff000;
+    border-radius: 3px;
+    content: "";
+  }
 }
 @media (max-width: 767px) {
   .sub_top {
@@ -4866,29 +5048,34 @@ body {
     border-top: 36px solid #eee;
     background: transparent;
   }
-  .sub_top .top_link ul {
+  .sub_top .top_link ul,
+  .sub_top .top_link ul.fixed {
     left: 0;
     right: 0;
     top: 8px;
   }
-  .sub_top .top_link ul li {
+  .sub_top .top_link ul li,
+  .sub_top .top_link ul.fixed li {
     padding-left: 2px;
   }
-  .sub_top .top_link ul li:before {
+  .sub_top .top_link ul li:before,
+  .sub_top .top_link ul.fixed li:before {
     width: 2px;
     height: 2px;
     margin-top: -1px;
   }
-  .sub_top .top_link ul li a {
+  .sub_top .top_link ul li a,
+  .sub_top .top_link ul.fixed li a {
     line-height: 33px;
     padding: 0 6px;
     font-size: 13px;
-    font-weight: 500;
   }
-  .sub_top .top_link ul li:hover a {
+  .sub_top .top_link ul li:hover a,
+  .sub_top .top_link ul.fixed li:hover a {
     color: rgba(8, 17, 33, 0.85);
   }
-  .sub_top .top_link ul li.on i:before {
+  .sub_top .top_link ul li.on i:before,
+  .sub_top .top_link ul.fixed li.on i:before {
     bottom: 5px;
     height: 10px;
   }
